[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm_coms_api"
version = "0.1.0"
authors = [{name = "Reuben", email = "reuben@metmetric.co.za"}]
description = "Python client for MetMetric Communications API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Reuben-MetMetric/mm_coms_api_client"
Repository = "https://github.com/Reuben-MetMetric/mm_coms_api_client.git"
Issues = "https://github.com/Reuben-MetMetric/mm_coms_api_client/issues"

# Alternative: Explicit package specification
[tool.setuptools]
packages = ["mm_coms_api"]

# Or use automatic discovery (choose one approach)
# [tool.setuptools.packages.find]
# where = ["."]
# include = ["mm_coms_api*"]